# interactive-portfolio

./: Dockerfile  README.md  docker-compose.override.yaml  docker-compose.yml  pyproject.toml
scripts/: entrypoint.sh
src/: create_superuser.py  manage.py
src/core/settings/: base.py
src/django_docker_starter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
