[project]
name = "interactive-portfolio"
version = "0.1.0"
description = "A modern Django starter with Docker, PostgreSQL, and uv"
requires-python = ">=3.12"

dependencies = [
    "django>=5.0,<6.0",
    "psycopg2-binary>=2.9",
    "python-dotenv",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
